add submit + radio buttons

--- a/src/components/materialCheckbox/materialCheckbox.css
+++ b/src/components/materialCheckbox/materialCheckbox.css
@@ -2,42 +2,55 @@
     font-size: 12px;
     display: flex;
     align-items: center;
+    margin-bottom: calc(9em / 3);
 }
 
 .material-checkbox .fake-checkbox {
-    --side-length: 1.5em;
+    --side-length: 1.3em;
     width: var(--side-length);
     height: var(--side-length);
     position: relative;
     margin-right: 0.6em;
     border-radius: 0.2em;
-
+    border: 0.1em solid var(--dark-gray);
+    cursor: pointer;
 }
 
 .material-checkbox .fake-checkbox.checked {
     background-color: var(--orange-red);
+    border-color: var(--orange-red);
 }
 
-.material-checkbox .fake-checkbox.checked:after {
+.material-checkbox .fake-checkbox:after {
     content: "";
     background-color: white;
     width: 0.1em;
-    height: 0.8em;
+    height: 0;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(calc(-50% + 0.1em), calc(-50% + 0em)) rotate(50deg);
+
 }
 
-.material-checkbox .fake-checkbox.checked:before {
+.material-checkbox .fake-checkbox.checked:after {
+
+    height: 0.8em;
+}
+
+.material-checkbox .fake-checkbox:before {
     content: "";
     background-color: white;
     width: 0.1em;
-    height: 0.35em;
+    height: 0;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(calc(-50% + -0.27em), calc(-50% + 0.1em)) rotate(-40deg);
+}
+
+.material-checkbox .fake-checkbox.checked:before {
+    height: 0.35em;
 }
 
 .material-checkbox input {
