--- a/src/components/materialCheckbox/materialCheckbox.css
+++ b/src/components/materialCheckbox/materialCheckbox.css
@@ -2,7 +2,7 @@
     font-size: 12px;
     display: flex;
     align-items: center;
-    margin-bottom: calc(9em / 3);
+    margin-bottom: 1em;
 }
 
 .material-checkbox .fake-checkbox {
@@ -12,7 +12,7 @@
     position: relative;
     margin-right: 0.6em;
     border-radius: 0.2em;
-    border: 0.1em solid var(--dark-gray);
+    border: 0.1em solid var(--dark-500);
     cursor: pointer;
 }
 
