--- a/src/components/materialSelect/materialSelect.css
+++ b/src/components/materialSelect/materialSelect.css
@@ -70,6 +70,7 @@
     right: 1.5em;
     top:50%;
     transform: translateY(-50%);
+    transition: transform  200ms ease-in;
 }
 .material-select .arrow:before{
     transform: rotate(45deg);
@@ -79,4 +80,7 @@
     content: "";
     border-right: 3px solid var(--gray-400);
     border-bottom: 3px solid var(--gray-400);
+}
+.material-select.expanded .arrow {
+    transform: translateY(-10%) scaleY(-1);
 }
