--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,9 @@ code {
 }
 :root{
   --dark-main: #2C2C36;
-  --gray-100: #F3F5F7;
-  --gray-200:#DEE1E7;
+  --gray-100: #f3f5f7;
+  --gray-200: #dee1e7;
+  --gray-150: #e8eaee;
   --gray-400: #AFB4C2;
   --dark-500: #A4A9B9;
   --orange-red: #FD4355;
