--- a/src/components/sectionHeader/sectionHeader.css
+++ b/src/components/sectionHeader/sectionHeader.css
@@ -1,7 +1,11 @@
 .section-header{
     font-size: 36px;
     margin-bottom: 40px;
-
+    position: sticky;
+    top:0;
+    background-color: white;
+    z-index: 2;
+    padding-bottom: 5px;
 }
 .section-header.center{
     text-align: center;
