--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,10 @@ code {
 :root{
   --dark-main: #2C2C36;
   --gray-100: #f3f5f7;
-  --gray-200: #dee1e7;
   --gray-150: #e8eaee;
-  --gray-400: #AFB4C2;
+  --gray-200: #dee1e7;
+  --gray-300: #c5cad6;
+  --gray-400: #afb4c2;
   --dark-500: #A4A9B9;
   --orange-red: #FD4355;
   --shadow-lvl-1: 0 1px 1px 0 rgba(0,0,0,0.14), 0 2px 1px -1px rgba(0,0,0,0.12), 0 1px 3px 0 rgba(0,0,0,0.20);
